--- a/pdf/static/html/pdf_edit.html
+++ b/pdf/static/html/pdf_edit.html
@@ -3,7 +3,7 @@
 
     <li class="field comp-setting-entry is-set">
       <div class="wrapper-comp-setting">
-        <label class="label setting-label" for="pdf_edit_display_name">Nom</label>
+        <label class="label setting-label" for="pdf_edit_display_name">PDF Display name</label>
         <input class="input setting-input" id="pdf_edit_display_name" value="{{ display_name }}" type="text">
       </div>
       <span class="tip setting-help">This name appears in the horizontal navigation at the top of the page.</span>
@@ -14,7 +14,7 @@
         <label class="label setting-label" for="pdf_edit_url">PDF URL</label>
         <input class="input setting-input" id="pdf_edit_url" value="{{ url }}" type="text">
       </div>
-      <span class="tip setting-help">L’URL du fichier PDF</span>
+      <span class="tip setting-help">The URL of the PDF file</span>
     </li>
 
     <li class="field comp-setting-entry is-set">
@@ -37,7 +37,7 @@
         <label class="label setting-label" for="pdf_edit_source_url">Source document URL</label>
         <input class="input setting-input" id="pdf_edit_source_url" value="{{ source_url }}" type="text">
       </div>
-      <span class="tip setting-help">Add your PDF source documentF (file Powerpoint, …)</span>
+      <span class="tip setting-help">Add your PDF source document (file Powerpoint, …)</span>
     </li>
 
   </ul>
